# FFITBIL

./: .gitignore  CMakeLists.txt  Rakefile  main.cpp  pixcolor.h  shade.c
